// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`describe block title 4. identifier reverse: 4. identifier reverse 1`] = `

function sayHi(person) {
  return 'Hello ' + person + '!';
}

      ↓ ↓ ↓ ↓ ↓ ↓

function iHyas(nosrep) {
  return 'Hello ' + nosrep + '!';
}

`;

exports[`unknown plugin 1. unknown plugin: 1. unknown plugin 1`] = `

"hello";

      ↓ ↓ ↓ ↓ ↓ ↓

'hello';


`;

exports[`unknown plugin 3. unknown plugin: 3. unknown plugin 1`] = `

function sayHi(person) {
  return 'Hello ' + person + '!'
}
console.log(sayHi('Jenny'))

      ↓ ↓ ↓ ↓ ↓ ↓

function iHyas(nosrep) {
  return 'Hello ' + nosrep + '!';
}
elosnoc.gol(iHyas('Jenny'));


`;

exports[`unknown plugin using jest snapshots: using jest snapshots 1`] = `

function sayHi(person) {
  return 'Hello ' + person + '!'
}

      ↓ ↓ ↓ ↓ ↓ ↓

function iHyas(nosrep) {
  return 'Hello ' + nosrep + '!';
}


`;
